<resources>
    <string name="app_name">Kotlin_MovieApp</string>
    <string name="tv_movieName">Название фильма</string>
    <string name="tv_Top250movies">Топ 250 лучших фильмов</string>
    <string name="tv_UpComing">Новинки кино</string>
    <string name="tv_TopTvShows">Лучшие сериалы</string>
    <string name="movie_title">Название фильма</string>
    <string name="movie_description">Описание фильма</string>
    <string name="search_bar">Поиск фильма</string>
    <string name="data_loading_error">Ошибка загрузки данных</string>
    <string name="data_loading_success">Данные успешно загружены</string>

    <!-- MovieDetailsFragment -->
    <string name="releaseDate">Год выхода: </string>
    <string name="genre">Жанр:</string>
    <string name="movie_length">Продолжительность фильма:</string>
    <string name="movie_country">Страна:</string>
    <string name="movie_budget">Бюджет фильма:</string>
    <string name="movie_KP_rating">Оценка Кинопоиска:</string>
    <string name="movie_IMDB_rating">Оценка IMDB:</string>
    <string name="actors">Актеры</string>
    <string name="movieStaff">Съемочная группа</string>

    <!-- MovieDetailsFragment Titles -->
    <string name="userNoteTitle">Добавьте свой комментарий</string>
    <string name="userCommentHint">Оставьте здесь свой комментарий по фильму</string>

    <!-- Объединение строк в коде -->
    <string name="movieBudget"> %1$s %2$s</string>
    <string name="movieLength"> %1$s мин</string>
    <string name="concDate"> %1$s %2$s</string>

    <!-- Отображения текста в приложении -->
    <string name="critical_error">Произошла непредвиденная ошибка</string>
    <string name="reload">Повторить попытку</string>
    <string name="notFoundBirthCityGeoposition">Не удалось отобразить точное место рождения</string>

    <!-- Меню навигация -->
    <string name="collections">Коллекции</string>
    <string name="favorites">Понравившиеся</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="searching_parameters">Настройки поиска фильмов</string>
    <string name="adult_off">Запрещен поиск фильмов, содержащих сцены, предназначенные для взрослых</string>
    <string name="adult_on">Разрешен поиск фильмов, содержащих сцены, предназначенные для взрослых</string>
    <string name="adult_content">Взрослый контент</string>
    <string name="searching_rating">Минимальный рейтинг фильма</string>

    <!-- SearchChildFragments Titles -->
    <string name="your_search_result">Мы нашли следующие фильмы по вашему запросу</string>
    <string name="history">История ваших просмотров</string>

    <!-- HistoryFragment -->
    <string name="userComments">Ваши комментарии по фильму:</string>
    <string name="viewingDate">Дата просмотра:</string>

    <!-- Favorites -->
    <string name="addMovieToFavorite">Фильм добавлен в Понравившиеся</string>
    <string name="deleteMovieFromFavorite">Фильм удален с Понравившихся</string>

    <!-- SearchFragment Menu -->
    <string name="get_contacts">Получить контакты</string>

    <!-- HomeFragment Menu -->
    <string name="error_message">Произошла непредвиденная ошибка</string>

    <!-- ContentDescription -->
    <string name="moviePoster">Постер к фильму</string>
    <string name="actorPhoto">Фото актера</string>

    <!-- PersonDetailsFragment -->
    <string name="personProfession">Карьера</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="age">Возраст</string>
    <string name="placeOfBirth">Место рождения</string>

    <!-- Сервис пуш-уведомлений -->
    <string name="lowPriorChannelName">Канал низкого приоритета</string>
    <string name="lowPriorChannelDesc">канал для отправки сообщений с низким приоритетом</string>
    <string name="highPriorChannelName">Канал высокого приоритета</string>
    <string name="highPriorChannelDesc">канал для отправки сообщений с высоким приоритетом</string>


</resources>