<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/searching_parameters">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_18_up_rating_24"
            app:key="adult_content"
            app:defaultValue="true"
            app:title="@string/adult_content"
            app:summaryOff="@string/adult_off"
            app:summaryOn="@string/adult_on"/>

        <SeekBarPreference
            app:icon="@drawable/ic_baseline_star_24"
            app:key="searching_ratings"
            app:title="@string/searching_rating"
            app:showSeekBarValue="true"
            android:max="10"
            app:defaultValue="5" />



    </PreferenceCategory>


</PreferenceScreen>