<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/personDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/personPhoto"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/actorPhoto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/personName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:lines="2"
                app:layout_constraintStart_toEndOf="@+id/personPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/profession"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/personName"
                app:layout_constraintTop_toBottomOf="@id/personName"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/personProfession"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/personProfession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:lines="3"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/personName"
                app:layout_constraintTop_toBottomOf="@id/profession"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/personAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:lines="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personPhoto"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateOfBirth"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/personDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:lines="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/placeOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeOfBirth"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/personPlaceOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:lines="2"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/placeOfBirthMapContainer"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placeOfBirth" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>